# agent-observer

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.py
core/: comparator.py  hallucination_scorer.py  langchain_plugin.py  observer.py  postmortem.py  rag_monitor.py
dashboard/: app.py
examples/: compare_demo.py  demo.py  hallucination_demo.py  langchain_demo.py  rag_demo.py
logs/: comparison_14e7a05c_vs_ffd098be.json  demo_session.json  langchain_session_7e860d8d.json
