[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-observer-ai"
version = "1.0.1"
description = "Real-time observability and auto-debugging toolkit for AI agents"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.32.0", "pandas>=1.5.0"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]

[project.urls]
Homepage = "https://github.com/mannya05/agent-observer"
Repository = "https://github.com/mannya05/agent-observer"
